workflows: improve ui, extend common metadata

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -306,6 +306,7 @@ media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
 media_entry_file_information_title,Datei,File information,
 media_entry_media_import_gotodrafts,Medieneinträge vervollständigen,Complete media entries,
+media_entry_media_import_gotoworkflow,Weiter zum Workflow,Continue to Workflow,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_box_header_a,,,
 media_entry_media_import_box_header_b, Upload(s), Upload(s),
@@ -754,55 +755,81 @@ vocabulary_term_info_rdfclass,Typ,Type,
 vocabulary_term_info_term,Begriff,Term,
 vocabulary_term_info_url,URL,URL,
 vocabulary_term_info_urls,URLs,URLs,
-workflow_edit_actions_back,Zurück,Go back,
-workflow_edit_actions_cancel,Abbrechen,Cancel,
-workflow_edit_actions_delete,X,X,
-workflow_edit_actions_validate,Prüfen,Check,
-workflow_edit_actions_validating,Prüfen…,Checking…,
-workflow_edit_actions_fill_data,Daten eingeben,Fill Data,
-workflow_edit_actions_processing,Formular aufrufen…,Processing…,
-workflow_edit_actions_save,Speichern,Save,
-workflow_edit_add_md_by_metakey,Hinzufügen,Add,
-workflow_edit_adder_meta_key_already_used,Metadatum wird schon verwendet,Metakey already used,
-workflow_owners_title,Workflow-Besitzer,Workflow owners,
-workflow_feature_title,Workflow,Workflow,
-workflow_associated_collections_title,Set mit Inhalten,Set with content,
-workflow_associated_collections_explain,In diesem Workflow-Set enthaltene Medieneinträge und Sets können bis zum Abschluss nur als Teil dieses Workflows bearbeitet werden.,Content contained in this workflow-set may only be edited until this workflow will be finished.,
-workflow_associated_collections_upload,Medien hinzufügen,Add media,
-workflow_common_settings_title,Gemeinsamer Datensatz,Common data,
-workflow_common_settings_explain,Folgende Angaben und Einstellungen gelten für alle enthaltenen Medieneinträge und Sets und werden mit Abschluss des Workflows permanent angewendet.,These data and settings apply to all contents and are permanently applied at the end of the process.,
-workflow_common_settings_permissions_title,Berechtigungen,Permissions,
-workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
-workflow_common_settings_permissions_write,Schreib- und Leserechte,Read and write permissions,
-workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
-workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
-workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
-workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
-workflow_common_settings_permissions_add_group,Gruppe hinzufügen,Add group,
-workflow_common_settings_permissions_add_api_client,API-Client hinzufügen,Add API-Client,
-workflow_common_settings_metadata_title,Meta-Daten,MetaData,
-workflow_preview_actions_back,Zurück,Go back,
-workflow_preview_actions_finish,Abschliessen,Finish,
-workflow_preview_actions_finishing,Abschliessen…,Finish…,
-workflow_preview_actions_save_data,Daten speichern,Save data,
-workflow_preview_actions_saving,Daten speichern…,Saving…,
-workflow_preview_consists_of_prefix,enthält,consists of,
-workflow_preview_consists_of_and,und,and,
-workflow_preview_consists_of_media_entries,Medieneinträge,Media entries,
-workflow_preview_consists_of_collections,Sets,Sets,
-workflow_preview_errors_found,Fehler gefunden,error(s) found,
-workflow_preview_header,Workflow-Vorschau,Preview of workflow ,
-workflow_preview_resources_header,Medienteinträge und Sets,Media entries and Sets,
-workflow_preview_finish_confirmation,Wollen Sie den Workflow abschliessen? Diese Aktion kann nicht rückgängig gemacht werden!,You're about to finish the workflow. This action cannot be undone. Do you want to proceed?,
-workflow_preview_summary_text_part_1,Folgende Angaben werden auf alle Medieneinträge und Sets angewendet enthalten im Workflow-Set,Following settings will apply to everything contained in the Set,
-workflow_preview_summary_text_part_2,Enthalten,Contained,
-workflow_preview_value_managed_by,Diese Angabe wird verwaltet vom Workflow,This value is managed by workflow,
-workflows_index_actions_edit,Bearbeiten,Edit,
-workflows_index_actions_new,Neuer Workflow,New workflow,
-workflows_index_actions_show,Details anzeigen,Show details,
-workflows_index_header,Meine Workflows,My Workflows,
 workgroup_link_to_contents_text,Inhalte,Items,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,Show items of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_title,Mitglieder,Members,
+workflow_actions_back,"Zurück","Go back"
+workflow_actions_finish,"Abschliessen…","Finish…"
+workflow_actions_validate,"Prüfen","Check"
+workflow_actions_validating,"Prüfen…","Checking…"
+workflow_add_md_by_metakey,"Hinzufügen","Add"
+workflow_adder_meta_key_already_used,"Metakey ist schon verwendet","Metakey already used"
+workflow_associated_collections_explain,In diesem Workflow-Set enthaltene Medieneinträge und Sets können bis zum Abschluss nur als Teil dieses Workflows bearbeitet werden.,Content contained in this workflow-set may only be edited until this workflow will be finished.,
+workflow_associated_collections_title,"Set mit Inhalten","Set with content"
+workflow_associated_collections_upload,"Medien hinzufügen","Add media"
+workflow_common_settings_explain_metadata,"Die für diesen Prozess relevanten Metadaten-Felder und ihre Einstellungen und Werte","Die für diesen Prozess relevanten Metadaten-Felder und ihre Einstellungen und Werte"
+workflow_common_settings_explain_permissions,"",""
+workflow_common_settings_explain,"Folgende Angaben und Einstellungen gelten für alle enthaltenen Medieneinträge und Sets und werden mit Abschluss des Workflows permanent angewendet.","These data and settings apply to all contents and are permanently applied at the end of the process.",
+workflow_common_settings_metadata_title,Meta-Daten,MetaData,
+workflow_common_settings_permissions_add_api_client,API-Client hinzufügen,Add API-Client,
+workflow_common_settings_permissions_add_group,Gruppe hinzufügen,Add group,
+workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
+workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
+workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
+workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
+workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
+workflow_common_settings_permissions_title,Berechtigungen,Permissions,
+workflow_common_settings_permissions_write,Schreib- und Leserechte,Read and write permissions,
+workflow_common_settings_title,Gemeinsamer Datensatz,Common data,
+workflow_edit_actions_back,Zurück,Go back,
+workflow_edit_actions_cancel,Abbrechen,Cancel,
+workflow_edit_actions_delete,X,X,
+workflow_edit_actions_fill_data,Daten eingeben,Fill Data,
+workflow_edit_actions_finish,Abschliessen,Finish,
+workflow_edit_actions_finishing,Wird abgeschlossen…,Finish…,
+workflow_edit_actions_processing,Lädt…,Loading…,
+workflow_edit_actions_save_data,Speichern,Save,
+workflow_edit_actions_validate,Prüfen & Abschliessen…,Check & Finish…,
+workflow_edit_actions_validating,Wird geprüft…,Checking…,
+workflow_edit_add_md_by_metakey,Hinzufügen,Add,
+workflow_edit_adder_meta_key_already_used,Metadatum wird schon verwendet,Metakey already used,
+workflow_feature_title,Workflow,Workflow,
+workflow_md_edit_form_key_is_managed_a,"Dieser Wert wird im Prozess ","This value is managed by workflow ",
+workflow_md_edit_form_key_is_managed_b," verwaltet.",".",
+workflow_md_edit_is_common_empty," (leer)"," (leer)"
+workflow_md_edit_is_common_explanation,"Gesetzter Wert soll auf alle enthaltenen Medieneinträge angewendet werden, oder (wenn deaktiviert) einzeln eingegeben werden können","Gesetzter Wert soll auf alle enthaltenen Medieneinträge angewendet werden, oder (wenn deaktiviert) einzeln eingegeben werden können"
+workflow_md_edit_is_common_nonempty," (gesetzt)"," (gesetzt)"
+workflow_md_edit_is_common,"Fixer Wert","Fixer Wert"
+workflow_md_edit_is_mandatory_explanation,"Alle enthaltenen Medieneinträge müssen einen Wert gesetzt haben, damit der Prozess abgeschlossen werden kann","Alle enthaltenen Medieneinträge müssen einen Wert gesetzt haben, damit der Prozess abgeschlossen werden kann"
+workflow_md_edit_is_mandatory,"Pflichtfeld","Pflichtfeld"
+workflow_md_edit_is_not_common,"Individuelle Vergabe","Individuelle Vergabe"
+workflow_md_edit_is_overridable,"…und dabei vorhandene Werte überschreiben","…und dabei vorhandene Werte überschreiben"
+workflow_md_edit_remove_btn,"Entfernen","Entfernen"
+workflow_md_edit_remove_explain,"Nach dem Entfernen wird dieses Metadaten-Feld nicht mehr innerhalb dieses Prozesses genutzt. Es kann weiterhin bei den jeweiligen Medienenträgen ausgefüllt werden.","Nach dem Entfernen wird dieses Metadaten-Feld nicht mehr innerhalb dieses Prozesses genutzt. Es kann weiterhin bei den jeweiligen Medienenträgen ausgefüllt werden."
+workflow_md_edit_value_error_notice,"Noch kein Fixer Wert vergeben für Pflichtfeld!","Noch kein Fixer Wert vergeben für Pflichtfeld!"
+workflow_owners_title,Workflow-Besitzer,Workflow owners,
+workflow_preview_actions_back,Zurück,Go back,
+workflow_preview_actions_finish,Abschliessen,Finish,
+workflow_preview_actions_finishing,Abschliessen…,Finish…,
+workflow_preview_actions_save_data,Daten speichern,Save data,
+workflow_preview_actions_saving,Daten speichern…,Saving…,
+workflow_preview_consists_of_and,und,and,
+workflow_preview_consists_of_collections,Sets,Sets,
+workflow_preview_consists_of_media_entries,Medieneinträge,Media entries,
+workflow_preview_consists_of_prefix,enthält,consists of,
+workflow_preview_errors_found,Fehler gefunden,error(s) found,
+workflow_preview_finish_confirmation,Wollen Sie den Workflow abschliessen? Diese Aktion kann nicht rückgängig gemacht werden!,You're about to finish the workflow. This action cannot be undone. Do you want to proceed?,
+workflow_preview_header,Workflow-Vorschau,Preview of workflow ,
+workflow_preview_resources_header,Medienteinträge und Sets,Media entries and Sets,
+workflow_preview_summary_text_part_1,Folgende Angaben werden auf alle Medieneinträge und Sets angewendet enthalten im Workflow-Set,Following settings will apply to everything contained in the Set,
+workflow_preview_summary_text_part_2,Enthalten,Contained,
+workflow_preview_value_managed_by,Diese Angabe wird verwaltet vom Workflow,This value is managed by workflow,
+workflow_uploader_notice_post,"","",
+workflow_uploader_notice_pre,"Following Media Entries will be added to the main collection of workflow","Following Media Entries will be added to the main collection of workflow",
+workflow_workflow_owners_title,"Prozess-Besitzer","Workflow owners"
+workflows_index_actions_edit,Bearbeiten,Edit,
+workflows_index_actions_new,Neuer Workflow,New workflow,
+workflows_index_actions_show,Details anzeigen,Show details,
+workflows_index_header,Meine Workflows,My Workflows,
