feat: add person's edit page with links live preview

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -455,11 +455,19 @@ permissions_table_remove_subject_btn,Berechtigung entfernen,Remove permission,
 permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Zugriffsberechtigungen,Permissions,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responsibility,
+person_edit_add_uri_btn,URI hinzufügen,Add URI,
+person_edit_cancel_btn,Abbrechen,Cancel,
+person_edit_editing_header,Bearbeiten,editing,
+person_show_external_uris,Links,Links,
+person_edit_preview,Vorschau,Preview,
+person_edit_save_btn,Speichern,Save,
 person_show_description,Beschreibung,Description,
+person_show_edit_btn,Bearbeiten,Edit,
 person_show_external_uris,Links,Links,
 person_show_external_uris_autority_control,Normdaten,Authority Control Data,
 person_show_first_name,Vorname,First name,
 person_show_last_name,Nachname,Last name,
+person_show_pseudonym,Pseudonym,Pseudonym,
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,Prefix für Titel von Bildern (hover-titel/Screenreader)
 relations_parents_title,Übergeordnete Sets,Parents,
@@ -730,6 +738,7 @@ user_menu_my_content_media_entries,Meine Medieneinträge,My media entries,
 user_menu_my_favorite_collections,Favoriten - Sets,Favorites - sets,
 user_menu_my_favorite_media_entries,Favoriten - Medieneinträge,Favorites - media entries,
 user_menu_my_groups,Meine Arbeitsgruppen,My work groups,
+user_menu_my_person,Meine Person,My person,
 user_menu_upload,Medien importieren,Upload media,
 user_name_deactivated,[Gelöschter User],[Deleted user],
 vocabularies_all,Alle Vokabulare,All vocabularies,
