feat: RDF export beta version
some specs pending

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -302,7 +302,8 @@ media_entry_export_subtitle_images,Bilder,Images,
 media_entry_export_subtitle_videos,Video-Dateien,Video files,
 media_entry_export_title,Medieneintrag exportieren,Download media entry,
 media_entry_export_rdf_title,RDF-Export Metadaten,RDF export metadata,
-media_entry_export_rdf_title_hint,(Beta-Version),(beta version),
+media_entry_export_rdf_title_hint,(experimentell),(experimental),
+media_entry_export_rdf_experiment_footnote,"Struktur und Format der Daten können sich ändern. Bitte geben sie eine Rückmeldung, falls Sie diese verwenden!","Data structure and format is subject to change. Please send feedback if you are using this!",
 media_entry_file_format_not_supported_1,"Wahrscheinlich unterstützt Ihr Browser nicht die Darstellung dieses Dateiformats, aber Sie ","Your browser probably does not support the file format, but you can ",
 media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
