feat: show "new version" notices for MediaEntries
* uses Core MetaKey 'madek_core:is_new_version_of'
* only displayed when responsible user is identical for both entries to prevent abuse

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -863,3 +863,4 @@ workflows_index_actions_edit,Bearbeiten,Edit,
 workflows_index_actions_new,Neuer Workflow,New workflow,
 workflows_index_actions_show,Details anzeigen,Show details,
 workflows_index_header,Meine Workflows,My Workflows,
+media_entry_notice_new_versions,Für diesen Medieneintrag sind neuere Versionen vorhanden:,Newer versions are available for this media entry:,
