--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -187,7 +187,7 @@ dashboard_create_collection,Set erstellen,Create set,
 dashboard_create_collection_btn,Set erstellen,Create set,
 dashboard_create_media_entry_btn,Medien importieren,Upload media,
 dashboard_none_exist,Keine vorhanden.,There are none.,
-dashboard_show_all,Alle anzeigen →,Show all →,
+dashboard_show_all,Alle anzeigen,Show all,
 dashboard_title_head,Mein Archiv,My archive,
 dynamic_filters_authorization,Berechtigung,Authorization,
 dynamic_filters_visibility,Sichtbarkeit,Accessability,
@@ -463,17 +463,17 @@ permissions_table_remove_subject_btn,Berechtigung entfernen,Remove permission,
 permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Zugriffsberechtigungen,Permissions,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responsibility,
-person_edit_add_uri_btn,URI hinzufügen,Add URI,
+person_edit_add_uri_btn,URI hinzufügen,Add URL,
 person_edit_cancel_btn,Abbrechen,Cancel,
 person_edit_editing_header,Bearbeiten,editing,
 person_show_external_uris,Links,Links,
 person_edit_preview,Vorschau,Preview,
 person_edit_save_btn,Speichern,Save,
 person_edit_name_readonly_hint,"Hinweis: Der eigene Name kann nicht geändert werden. Bitte wenden sie sich an den Support.","Notice: Your own name can not be changed .Please contact the support."
-person_show_description,Beschreibung,Description,
-person_show_edit_btn,Bearbeiten,Edit,
+person_show_description,Kurzbiographie,Short biography,
+person_show_edit_btn,Seite bearbeiten,Edit Page,
 person_show_external_uris,Links,Links,
-person_show_external_uris_autority_control,Normdaten,Authority Control Data,
+person_show_external_uris_autority_control,Verzeichnis(se),Register,
 person_show_first_name,Vorname,First name,
 person_show_last_name,Nachname,Last name,
 person_show_pseudonym,Pseudonym,Pseudonym,
