feat: manual sorting of media entries in collection
Includes:
- remove unnecessary imports
- update madek-icon-font to v1.4.1

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -129,6 +129,8 @@ collection_resource_selection_save,Auswahl speichern,Save selection,
 collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} set(s). Added set to %{added_count} set(s).,TODO_cleanup_interpolation
 collection_sorting_created_at_asc,Sortieren nach Importierdatum aufsteigend,Sort by import date ascending,
 collection_sorting_created_at_desc,Sortieren nach Importierdatum absteigend,Sort by import date descending,
+collection_sorting_manual_asc,Sortieren manuell aufsteigend,Sort manually ascending,
+collection_sorting_manual_desc,Sortieren manuell absteigend,Sort manually descending,
 collection_sorting_last_change,Sortieren nach letzter Änderung,Sort by date of update,
 collection_sorting_title_asc,Sortieren nach Titel alphabetisch,Sort by title alphabetically,
 collection_sorting_title_desc,Sortieren nach Titel absteigend,"Sort by title alphabetically, but descending",
@@ -622,6 +624,7 @@ resources_box_batch_person_widget_add_group,Arbeitsgruppe einfügen,Add group,
 resources_box_batch_person_widget_tab_person,Person,Person,
 resources_box_batch_person_widget_tab_group,Gruppe,Group,
 resources_section_show_all,Alle anzeigen →,Show all →,
+resources_type_all,Alle,All,
 search_btn_search,Suchen,Search,
 search_filename,Filename,File name,
 search_full_text,Volltext,Full text,
