feat: add delegations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -455,11 +455,13 @@ permission_subject_title_users,Nutzer/innen,Users,
 permissions_batch_success,Berechtigungen wurden erfolgreich aktualisiert.,Permissions have been updated succesfully.,
 permissions_batch_title_post, Inhalten., Items.,
 permissions_batch_title_pre,Berechtigungen ändern von ,Edit permissions of ,
-permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Arbeitsgruppe folgende Berechtigungen:",", currently have the following permissions (either directly or as a member of a work group):",
+permissions_overview_yours_msg_end,", haben gegenwärtig als Nutzer/in oder als Mitglied einer VerantowrtungsGruppe oder Arbeitsgruppe folgende Berechtigungen:",", currently have the following permissions (either directly or as a member of a
+responsibility group or as a member of a work group):",
 permissions_overview_yours_msg_start,"Sie, ","You, ",
 permissions_overview_yours_title,Ihre Berechtigungen,Your permissions,
 permissions_responsibility_title,Verantwortlichkeit,Responsibility,
-permissions_responsible_user_msg,Die verantwortliche Person hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user has all permissions for the selected content and can also delete it.,
+permissions_responsible_user_and_responsibility_group_title,Verantwortliche/r Nutzer/in / Verantwortungs-Gruppe,Responsible user / Responsibility group,
+permissions_responsible_user_and_responsibility_group_msg,Der/die verantwortliche/r Nutzer/in hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user / responsibility group has all permissions for the selected content and can also delete it.,
 permissions_responsible_user_title,Verantwortliche Person,Responsible user,
 permissions_table_cancel_btn,Abbrechen,Cancel,
 permissions_table_edit_btn,Bearbeiten,Edit,
@@ -627,11 +629,12 @@ resources_box_batch_person_widget_tab_person,Person,Person,
 resources_box_batch_person_widget_tab_group,Gruppe,Group,
 resources_section_show_all,Alle anzeigen →,Show all →,
 resources_type_all,Alle,All,
+responsibility_groups,Verantwortungs-Gruppen,Responsibility groups,
 search_btn_search,Suchen,Search,
 search_filename,Filename,File name,
 search_full_text,Volltext,Full text,
 section_title_collections,Meine Sets,My sets,
-section_title_groups,Meine Arbeitsgruppen,My work groups,
+section_title_groups,Meine Gruppen,My groups,
 section_title_keywords,Meine Schlagworte,My keywords,
 section_title_media_entries,Meine Medieneinträge,My media entries,
 section_title_tokens,Meine Tokens,My tokens,
@@ -663,12 +666,14 @@ sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_clipboard,Stapelverarbeitung,Batch processing,
 sitemap_my_content_collections,Sets,Sets,
 sitemap_my_content_media_entries,Medieneinträge,Media entries,
+sitemap_my_delegated_collections,Sets in gemeinsamer Verantwortung,Sets with joint responsibility,
+sitemap_my_delegated_media_entries,Medieneinträge in gemeinsamer Verantwortung,Media entries with joint responsibility,
 sitemap_my_entrusted_collections,Mir anvertraute Sets,My entrusted sets,
 sitemap_my_entrusted_filter_sets,Mir anvertraute Filtersets,My entrusted filter sets,
 sitemap_my_entrusted_media_entries,Mir anvertraute Medieneinträge,My entrusted media entries,
 sitemap_my_favorite_collections,Favoriten-Sets,Favorite sets,
 sitemap_my_favorite_media_entries,Favoriten-Medieneinträge,Favorite media entries,
-sitemap_my_groups,Arbeitsgruppen,Work groups,
+sitemap_my_groups,Gruppen,Groups,
 sitemap_my_latest_imports,Letzte Importe,Last imports,
 sitemap_my_unpublished,Unvollständige Medieneinträge,Incomplete media entries,
 sitemap_my_used_keywords,Schlagworte,Keywords,
@@ -729,7 +734,7 @@ transfer_responsibility_person_will_receive_2,", behalten folgende Berechtigunge
 transfer_responsibility_submit,Übertragen,Transfer,
 transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erfolgreich übertragen.,You have successfully transferred responsibility for the set.,
 transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erfolgreich übertragen.,You have successfully transferred responsibility for the media entry.,
-transfer_responsibility_title,Verantwortlichkeit auf folgende/n Nutzer/in übertragen,Transfer responsibility to the following user,
+transfer_responsibility_title,Verantwortlichkeit auf folgende/n Nutzer/in oder Delegation übertragen,Transfer responsibility to the following user or delegation,
 usage_data_created_at,Erstellt am,Created on,
 usage_data_import_at,Importiert am,Imported on,
 usage_data_import_by,Importiert durch,Imported by,
@@ -739,7 +744,7 @@ usage_data_relations_children,Set enthält,Set is related to,
 usage_data_relations_parents,Übergeordnete Sets,Parent sets,
 usage_data_relations_title,Zusammenhänge,Relations,
 usage_data_responsibility_title,Verantwortlichkeit und Aktivitäten,Responsibility and activities,
-usage_data_responsible,Verantwortliche/r Nutzer/in,Responsible user,
+usage_data_responsible,Verantwortliche/r Nutzer/in / Verantwortungs-Gruppe,Responsible user / responsibility group,
 usage_terms_accept_btn,Nutzungsbedingungen akzeptieren,Accept usage terms,
 usage_terms_reject_btn,Ablehnen,Reject usage terms,
 user_menu_admin_mode_toogle_off,Admin-Modus beenden,Stop admin mode,
@@ -751,7 +756,7 @@ user_menu_my_content_collections,Meine Sets,My sets,
 user_menu_my_content_media_entries,Meine Medieneinträge,My media entries,
 user_menu_my_favorite_collections,Favoriten - Sets,Favorites - sets,
 user_menu_my_favorite_media_entries,Favoriten - Medieneinträge,Favorites - media entries,
-user_menu_my_groups,Meine Arbeitsgruppen,My work groups,
+user_menu_my_groups,Meine Gruppen,My groups,
 user_menu_my_person,Meine Person,My person,
 user_menu_upload,Medien importieren,Upload media,
 user_name_deactivated,[Gelöschter User],[Deleted user],
