feat: show sibling media entries from the same set(s)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -335,7 +335,9 @@ media_entry_relations_current,Aktueller Eintrag,Current entry,
 media_entry_relations_hint_text,"Der ausgewählte Medieneintrag ist mit Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.","The selected media entry is connected to sets. These relations are actively defined as a parent, a sibling or a child relationship. The sets displayed here are your own or are shared with you by other users.",
 media_entry_relations_parents_hint,Der ausgewählte Medieneintrag wurde diesen Sets hinzugefügt.,The selected media entry was added to these sets.,
 media_entry_relations_siblings_hint,Diese Sets wurden den gleichen Sets hinzugefügt wie der ausgewählte Medieneintrag.,These sets were added to the same sets as the selected media entry.,
-media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Media entry removed from %{removed_count} set(s) and added to %{added_count} set(s).,TODO_cleanup_interpolation
+media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Media entry removed from %{removed_count} set(s) and added to %{added_count} set(s).,TODO_cleanup_interpolation,
+media_entry_siblings_section_title,Weitere Medieneinträge im selben Set,Other media entries in the same set,
+media_entry_siblings_parent_set,Übergeordnetes Set:,Parent set:,
 media_entry_tab_main,Medieneintrag,Media entry,
 media_entry_tab_more_data,Alle Metadaten,All metadata,
 media_entry_tab_permissions,Berechtigungen,Permissions,
