feat: delegation as workflow's owner

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -808,6 +808,7 @@ workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
 workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
 workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
 workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
+workflow_common_settings_permissions_select_owner,Nutzer/innen oder Delegationen auswählen,Select user or delegation,
 workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
 workflow_common_settings_permissions_title,Berechtigungen,Permissions,
 workflow_common_settings_permissions_write,Schreib- und Leserechte,Read and write permissions,
@@ -871,6 +872,7 @@ workflow_uploader_notice_pre,"Following Media Entries will be added to the main 
 workflow_workflow_owners_title,"Workflow-Besitzer","Workflow owners"
 workflows_index_actions_edit,Bearbeiten,Edit,
 workflows_index_actions_new,Neuer Workflow,New workflow,
+workflows_index_action_save,Speichern,Save,
 workflows_index_actions_show,Details anzeigen,Show details,
 workflows_index_header,Meine Workflows,My Workflows,
 media_entry_notice_new_versions,Für diesen Medieneintrag sind neuere Versionen vorhanden:,Newer versions are available for this media entry:,
