--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -227,7 +227,9 @@ error_401_title,"Um Zugang zu diesem Bereich zu erhalten, melden Sie sich bitte 
 error_403_message,Bitte kontaktieren Sie die für den Medieneintrag oder das Sets verantwortliche Person.,Please contact the responsible user who has the right alllow access.,
 error_403_title,Sie haben keine Zugriffsrechte für diesen Inhalt.,You don’t have the necessary permissions to access this resource.,
 error_404_title,Die gesuchte Seite kann nicht gefunden werden.,The requested page cannot be found.,
-error_500_message,"Benötigen Sie diesbezüglich Hilfe, dann kontaktieren Sie bitte den Support (support.medienarchiv@zhdk.ch) mit einer Beschreibung Ihrer letzten Arbeitsschritte sowie einem Screenshot dieser Seite.","If you require help in this matter, please contact the support (support.medienarchiv@zhdk.ch) with a description of your last working steps and a screen shot of this page.",
+error_500_message,"Benötigen Sie diesbezüglich Hilfe, dann kontaktieren Sie bitte den Support (%{support_email}) mit einer Beschreibung Ihrer letzten Arbeitsschritte sowie einem Screenshot dieser Seite.","If you require help in this matter, please contact the support (%{support_email}) with a description of your last working steps and a screen shot of this page.",
+error_500_message_pre,"Benötigen Sie diesbezüglich Hilfe, dann kontaktieren Sie bitte den Support (","If you require help in this matter, please contact the support (",
+error_500_message_post,") mit einer Beschreibung Ihrer letzten Arbeitsschritte sowie einem Screenshot dieser Seite.",") with a description of your last working steps and a screen shot of this page.",
 error_500_title,Es ist ein Server-Fehler aufgetreten.,A server error occurred.,
 explore_keywords_section_title,Häufige Schlagworte,Frequent keywords,
 explore_show_more,Weitere anzeigen,Show more,
